# AssistX

./: .gitignore  CMakeLists.txt
include/core/: Assistant.h  isRunning.h
include/enums/: unmumerations.h
include/handlers/: BaseHandlers.h
include/parser/: ActionParser.h  CommandParser.h  IParser.h  ParameterParser.h  ParserJSON.h
include/patterns/: TextParserFactory.h
include/recognizer/: InterfaceVoiceRecognize.h  RecognizeVosk.h
include/voice/: InputVoice.h
lib/vosk/: vosk_api.h
src/: CMakeLists.txt  main.cpp
src/core/: Assistant.cpp  Assistant.h  InterfaceVoiceRecognize.h  isRunning.cpp  isRunning.h
src/headers/: Core_Interface.h  InterfaceVoiceRecognize.h  defines.h
src/parser/: ActionParser.cpp  CommandParser.cpp  ParserJSON.cpp
src/patterns/: TextParserFactory.cpp
src/recognizer/: RecognizeVosk.cpp  RecognizeVosk.h
src/voice/: InputVoice.cpp  InputVoice.h
